Adjust grid to fix spacing issue

--- a/styles.css
+++ b/styles.css
@@ -186,7 +186,7 @@ article {
   background-color: #00000009;
   display: grid;
   grid-template-columns: 1fr auto;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: auto 1fr auto;
   grid-template-areas: "headline image" 
                        "abstract image" 
                        "keywords keywords";
